correction alignement maquette

--- a/style.css
+++ b/style.css
@@ -207,10 +207,7 @@ input:hover {
     flex-wrap: wrap;
 }
 
-#populaires,
-#hebergements {
-    padding: 2em;
-}
+
 
 #activites h2 {
     margin-left: 2em;
@@ -224,7 +221,6 @@ input:hover {
     border-radius: 2.35em;
     box-shadow: 0 0 0.7em #00000040;
     height: 160px;
-    width: 350px;
 }
 
 #populaires > a {
@@ -253,7 +249,6 @@ input:hover {
     margin-bottom: 1em;
     box-shadow: 0 0 0.7em #00000040;
     height: 200px;
-    width: 250px;
 }
 
 #hebergements > a {
@@ -283,7 +278,8 @@ input:hover {
         display:flex;
         height: 500px;
         justify-content: space-between;
-        margin-left: 2em;
+        margin-right: 2%;
+        margin-left: 2%;
         margin-bottom: 2em;
         
     }
@@ -419,11 +415,11 @@ footer {
 }
 
 #hebergements {
-    width: 60%;
+    width: 59%;
 }
 
 #populaires {
-    width: 25%;
+    width: 35%;
 }
 
 #activites {
@@ -437,15 +433,14 @@ footer {
 #populaires {
     background-color: #f2f2f2;
     border-radius: 2em;
-    margin-right: 2em;
     margin-bottom: 2em;
 }
 
 #hebergements {
     background-color: #f2f2f2;
     border-radius: 1.2em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 2%;
+    margin-right: 2%;
     margin-bottom: 2em;
 }
 
